--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,21 +32,25 @@ jobs:
           cd bin
           sha256sum gateshift-linux-amd64 gateshift-linux-arm64 gateshift-darwin-amd64 gateshift-darwin-arm64 gateshift-windows-amd64.exe > checksums.txt
           cat checksums.txt
-          echo "CHECKSUMS<<EOF" >> $GITHUB_ENV
-          cat checksums.txt >> $GITHUB_ENV
-          echo "EOF" >> $GITHUB_ENV
+          {
+            echo "CHECKSUMS<<ENDOFCHECKSUMS"
+            cat checksums.txt
+            echo "ENDOFCHECKSUMS"
+          } >> $GITHUB_ENV
 
       - name: Generate changelog
         id: changelog
         run: |
-          echo "CHANGELOG<<EOF" >> $GITHUB_ENV
-          # Handle both first release and subsequent releases
-          if git describe --tags --abbrev=0 HEAD^ 2>/dev/null; then
-            git log $(git describe --tags --abbrev=0 HEAD^)..HEAD --pretty=format:'* %s' >> $GITHUB_ENV
-          else
-            git log --pretty=format:'* %s' >> $GITHUB_ENV
-          fi
-          echo "EOF" >> $GITHUB_ENV
+          {
+            echo "CHANGELOG<<ENDOFCHANGELOG"
+            # Handle both first release and subsequent releases
+            if git describe --tags --abbrev=0 HEAD^ 2>/dev/null; then
+              git log $(git describe --tags --abbrev=0 HEAD^)..HEAD --pretty=format:'* %s'
+            else
+              git log --pretty=format:'* %s'
+            fi
+            echo "ENDOFCHANGELOG"
+          } >> $GITHUB_ENV
 
       - name: Create Release
         id: create_release
