--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,12 @@ on:
   push:
     tags:
       - 'v*'
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Version for manual release (leave empty to use "dev")'
+        required: false
+        default: 'dev'
 
 jobs:
   build:
@@ -23,9 +29,14 @@ jobs:
       - name: Build all platforms
         run: make build-all
 
-      - name: Get version from tag
+      - name: Get version from tag or input
         id: get_version
-        run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+        run: |
+          if [[ "${{ github.event_name }}" == "push" ]]; then
+            echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+          else
+            echo "VERSION=${{ github.event.inputs.version || 'dev' }}" >> $GITHUB_ENV
+          fi
         
       - name: Generate checksums
         run: |
@@ -53,6 +64,7 @@ jobs:
       - name: Create Release
         id: create_release
         uses: softprops/action-gh-release@v1
+        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
         with:
           name: Release ${{ env.VERSION }}
           draft: false
@@ -73,4 +85,17 @@ jobs:
             bin/gateshift-windows-amd64.exe
             bin/checksums.txt
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          
+      - name: Upload artifacts (for manual runs)
+        if: github.event_name == 'workflow_dispatch'
+        uses: actions/upload-artifact@v3
+        with:
+          name: gateshift-${{ env.VERSION }}-binaries
+          path: |
+            bin/gateshift-linux-amd64
+            bin/gateshift-linux-arm64
+            bin/gateshift-darwin-amd64
+            bin/gateshift-darwin-arm64
+            bin/gateshift-windows-amd64.exe
+            bin/checksums.txt 
